--- a/888repair/Views/Repair/ReplyRepairIndex.cshtml
+++ b/888repair/Views/Repair/ReplyRepairIndex.cshtml
@@ -112,9 +112,15 @@
 </body>
 <script type="text/html" id="ID-table-demo-css-user">
     <ul>
-        <li><strong style="font-weight:400;font-size:small">【SystemCategory系统类别】: {{= d.SystemCategory }}</strong> </li>
-        <li><strong style="font-weight:400;font-size:small">【Building大楼别】:{{= d.Building }}</strong> </li>
-        <li><strong style="font-weight:400;font-size:small">【Loaction位置】:{{= d.Loaction }}</strong> </li>
+        <li><strong style="font-weight:400;font-size:small">【系统类别】: {{= d.SystemCategory }}</strong> </li>
+        <li><strong style="font-weight:400;font-size:small">【大楼别】:{{= d.Building }}</strong> </li>
+        <li><strong style="font-weight:400;font-size:small">【位置】:{{= d.Loaction }}</strong> </li>
+    </ul>
+</script>
+<script type="text/html" id="ID-table-demo-css-user2">
+    <ul>
+        <li><strong style="font-weight:400;font-size:small">【反应人】: {{= d.ResponseEmpname }}</strong> </li>
+        <li><strong style="font-weight:400;font-size:small">【负责人】:{{= d.ChargeEmpname }}</strong> </li>
     </ul>
 </script>
 <script type="text/html" id="barDemo">
@@ -202,25 +208,27 @@
                             ].join('')
                             , cols: [[
                                // { type: 'checkbox', LAY_CHECKED: false},
-                                { fixed: 'left', title: '操作', width: 80, minWidth: 80, toolbar: '#barDemo' },
-                                { field: 'RepairId', title: '请修编号(RepairID)', width: 160 },
-                                { field: 'username', width: 340, title: 'SystemClass(分类项目)', templet: '#ID-table-demo-css-user' },
+                                { fixed: 'left', title: '操作', width: '8%', minWidth: 80, toolbar: '#barDemo' },
+                              //  { field: 'RepairId', title: '请修编号(RepairID)', width: 160 },
+                                { field: 'username', width: '20%', title: '分类项目', templet: '#ID-table-demo-css-user' },
                                 //{ field: 'SystemCategory', title: 'SystemCategory(系统类别)', width: 210 },
                                 //{ field: 'Building', title: 'Building(大楼别)', width: 210 },
                                 //{ field: 'Loaction', title: 'Loaction(位置)', width: 210 },
-                                { field: 'Category', title: 'Category(类别)', width: 210 },
-                                { field: 'ResponseEmpname', title: 'Contacts(反应人)', width: 170 },
-                                { field: 'ChargeEmpname', title: 'Repairer(负责人姓名)', width: 170 },
-                                { field: 'ResponseContent', title: 'Description(反应内容)', width: 300 },
-                                { field: 'Status', title: 'Status(执行状态)', width: 170 },
+                                { field: 'Category', width: '10%', title: '类别' },
+                                { field: 'username', width: '15%', title: '人员名称', templet: '#ID-table-demo-css-user2' },
+                                //{ field: 'ResponseEmpname', title: 'Contacts(反应人)', },
+                                //{ field: 'ChargeEmpname', title: 'Repairer(负责人姓名)'},
+                                { field: 'ResponseContent', width: '25%', title: '反应内容', style: 'color:#020615'},
+                                { field: 'Status', width: '10%',  title: '执行状态' },
                                 {
-                                    field: 'CreatTime', title: 'Fill-in Date(填表时间)', width: 180,
+                                    field: 'CreatTime', title: '填表时间', width: '12%', 
                                     templet: "<div>{{ formatDate(d.CreatTime,'yyyy-MM-dd HH:mm:ss')}}</div>"
-                                },
-                                {
-                                    field: 'FinishTime', title: 'Finish Time(完单时间)', width: 180,
-                                    templet: "<div>{{ formatDate(d.FinishTime,'yyyy-MM-dd HH:mm:ss')}}</div>"
                                 }
+                                ,
+                                //{
+                                //    field: 'FinishTime', title: 'Finish Time(完单时间)',
+                                //    templet: "<div>{{ formatDate(d.FinishTime,'yyyy-MM-dd HH:mm:ss')}}</div>"
+                                //}
                             ]],
                             done: function () {
                                 layer.close(loading);
