--- a/888repair/Views/Repair/ProblemListIndex.cshtml
+++ b/888repair/Views/Repair/ProblemListIndex.cshtml
@@ -115,9 +115,15 @@
 </div>
 <script type="text/html" id="ID-table-demo-css-user">
     <ul>
-        <li><strong style="font-weight:400">【SystemCategory系统类别】: {{= d.SystemCategory }}</strong> </li>
-        <li><strong style="font-weight:400">【Building大楼别】:{{= d.Building }}</strong> </li>
-        <li><strong style="font-weight:400">【Loaction位置】:{{= d.Loaction }}</strong> </li>
+        <li><strong style="font-weight:400">【系统类别】: {{= d.SystemCategory }}</strong> </li>
+        <li><strong style="font-weight:400">【大楼别】:{{= d.Building }}</strong> </li>
+        <li><strong style="font-weight:400">【位置】:{{= d.Loaction }}</strong> </li>
+    </ul>
+</script>
+<script type="text/html" id="ID-table-demo-css-user2">
+    <ul>
+        <li><strong style="font-weight:400;font-size:small">【反应人】: {{= d.ResponseEmpname }}</strong> </li>
+        <li><strong style="font-weight:400;font-size:small">【负责人】:{{= d.ChargeEmpname }}</strong> </li>
     </ul>
 </script>
 <script type="text/html" id="barDemo">
@@ -313,25 +319,27 @@
                             ].join('')
                             , cols: [[
                                 // { type: 'checkbox', LAY_CHECKED: false},
-                                { fixed: 'left', title: '操作', width: 130, minWidth: 80, toolbar: '#barDemo' },
-                                { field: 'RepairId', title: 'RepairID', width: 150 },
-                                { field: 'username', width: 360, title: 'SystemClass(分类项目)', templet: '#ID-table-demo-css-user' },
+                                { fixed: 'left', title: '操作', width: '8%', toolbar: '#barDemo' },
+                               // { field: 'RepairId', title: 'RepairID', width: 150 },
+                                { field: 'username', width: '20%', title: '分类项目', templet: '#ID-table-demo-css-user' },
                                 //{ field: 'SystemCategory', title: '系统类别', width: 210 },
                                 //{ field: 'Building', title: '大楼别', width: 210 },
                                 //{ field: 'Loaction', title: '位置', width: 210 },
-                                { field: 'Category', title: '类别', width: 210 },
-                                { field: 'ResponseEmpname', title: '反应人', width: 170 },
-                                { field: 'ChargeEmpname', title: '负责人', width: 170 },
-                                { field: 'ResponseContent', title: '反应内容', width: 300 },
-                                { field: 'Status', title: '执行状态', width: 170 },
+                                { field: 'Category', width: '10%', title: '类别'},
+                                { field: 'username', width: '15%',title: '人员名称', templet: '#ID-table-demo-css-user2' },
+                                //{ field: 'ResponseEmpname', title: '反应人', width: 170 },
+                                //{ field: 'ChargeEmpname', title: '负责人', width: 170 },
+                                { field: 'ResponseContent', width: '25%', title: '反应内容', style: 'color:#020615'},
+                                { field: 'Status', width: '10%', title: '执行状态'},
                                 {
-                                    field: 'CreatTime', title: '填表时间', width: 180,
+                                    field: 'CreatTime', title: '填表时间', width: '12%',
                                     templet: "<div>{{ formatDate(d.CreatTime,'yyyy-MM-dd HH:mm:ss')}}</div>"
-                                },
-                                {
-                                    field: 'FinishTime', title: 'Finish Time(完单时间)', width: 180,
-                                    templet: "<div>{{ formatDate(d.FinishTime,'yyyy-MM-dd HH:mm:ss')}}</div>"
                                 }
+                                //,
+                                //{
+                                //    field: 'FinishTime', title: 'Finish Time(完单时间)', width: 180,
+                                //    templet: "<div>{{ formatDate(d.FinishTime,'yyyy-MM-dd HH:mm:ss')}}</div>"
+                                //}
 
                             ]],
                             done: function () {
